# magnus-multi-build

./: .gitignore  Dockerfile  Gemfile  README.md  Rakefile  cross_compile.sh  docker-compose.yml  magnus_multi_build.gemspec
.github/workflows/: cross-compile.yml  test-cross-compiled.yml
ext/magnus_multi_build/: Cargo.toml  extconf.rb
ext/magnus_multi_build/src/: lib.rs
lib/: magnus_multi_build.rb
lib/magnus_multi_build/: magnus_multi_build_stub.rb  version.rb
test/: test_magnus_multi_build.rb
