[package]
name = "magnus_multi_build"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = "0.7"
rb-sys = { version = "0.9.102", features = [ "bindgen-rbimpls", "bindgen-deprecated-types", "stable-api-compiled-fallback" ] }

[build-dependencies]
rb-sys-env = { version = "0.2" }